# flecstest

./: .gitignore  CMakeLists.txt  README.md  project.json
include/: flecstest.h
include/flecstest/: bake_config.h
src/: main.cpp
